--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
             <form id="record-form">
                 <div class="form-group">
                     <label for="type">종류</label>
-                    <select id="type" name="type">
-                        <option value="deed">💖 책</option>
-                        <option value="help">💖 드라마</option>
-                        <option value="help">💖 영화</option>
-                    </select>
+                        <select id="type" name="type">
+                          <option value="book">📚 책</option>
+                          <option value="drama">📺 드라마</option>
+                          <option value="movie">🎬 영화</option>
+                        </select>
+
                 </div>
                 <div class="form-group">
                     <label for="date">날짜</label>
