--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>WATCHED</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+<script src="script.js"></script>
+
 <body>
     <div class="container">
         <header>
